fix SQL exception message